--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
     <title>Landing Page</title>
     <link rel="stylesheet" href="/estilos.css">
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
  <body>
     <header class="header">
@@ -23,10 +26,11 @@
         <div class="recompensa">
             <h1>A pura danza <br> por tres días</h1> 
             <p>Rellenando el formulario vas a estar <br> participando por una entrada a uno <br> de los días del evento “Bailando todo”</p>
-             <h4> Quiero ir! </h4> 
+             <br>
+             <h4 class="cta"> Quiero ir! </h4> 
             </div>
             <div class="foto">
-                <img src="data/img0.jpg">
+                <img src="data/img00.jpg">
             </div>
         </section>
       <div>
@@ -62,24 +66,81 @@
     </li>
     </ul>
 </div>
-        <section>
+        <section class="estilos">
             <h3 class="titulos"> ESTILOS</h3>
+            <ul class="profes">
+                <li>
+                    <div class="rectangulos">
+                        <img src="data/estilos1.jpg" alt="danza clásica">
+                    </div>
             <h4>Clásico</h4>
-            <p> Técina Vaganova de la escuela rusa </p>
+            <p> Técina Vaganova de la <br> escuela rusa </p>
+        </li>
+        <li>
+            <div class="rectangulos">
+                <img src="data/estilos2.jpg" alt="danza contemporánea">
+            </div>
             <h4> Contemporáneo</h4>
-            <p> Técninca Graham</p>
+            <p> Técninca Graham <br>    </p>
+        </li>
+        <li>
+            <div class="rectangulos">
+            <img src="data/estilos3.jpg" alt="danza jazz">
+        </div>
             <h4> Jazz </h4>
-            <p> Entrenamiento y coreografía de Broadway </p>
+            <p> Entrenamiento y <br> coreografía de Broadway </p>
+        </li>
+        <li>
+            <div class="rectangulos">
+            <img src="data/estilos4.jpg" alt="danza urbana">
+        </div>
             <h4> Urbano</h4>
-            <p> Implementación de improvisación </p>
+            <p> Implementación de<br>improvisación </p>
+        </li>
+        </ul>
         </section>
         <section>
-            <h2> CRONOGRAMA </h2>
+            <h2 class="titulos"> CRONOGRAMA </h2>
+            <div id="carousel" class="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="data/cronograma1.jpg" class="tamaño" alt="viernes">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="data/cronograma2.jpg" class="tamaño" alt="sabado">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="data/cronograma3.jpg" class="tamaño" alt="domingo">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </section>
      <h3><a href="https://balletindance.com/">Revista</a></h3>
     </main>
     <footer>
-<p>© Balletin Dance, La Revista Argentina de Danza - 2023 - Buenos Aires - Argentina</p>
+        <ul class="menu">
+            <li>
+                <p class="letras">Inicio</p>
+            </li>
+            <li>
+                <p class="letras">Edición digital</p>
+            </li>
+            <li>
+                <p class="letras">Capacitación docente</p>
+            </li>
+            <li>
+                <p class="letras" >Tienda</p>
+            </li>
+        </ul>
+<p class="letrastam">© Balletin Dance, La Revista Argentina de Danza - 2023 - Buenos Aires - Argentina</p>
     </footer>
  </body>
 
