--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <ul class="navbar-nav ms-auto navegadores">
+                <ul class="nav nav-underline ms-auto navegadores">
                     <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Edición digital</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Capacitación docente</a></li>
@@ -38,9 +38,9 @@
         <div class="card text-bg-dark">
             <article class="col-12 col-lg-12">
                 <img src="data/img00.jpg" class="card-img" alt="...">
-                <div class="card-img-overlay mt-5 ms-5">
-                    <h1 class="card-title mb-4">A pura danza <br> por tres días </h1>
-                    <p class="card-text mb-4">Rellenando el formulario vas a estar <br> participando por una entrada a
+                <div class="card-img-overlay my-5 ms-5">
+                    <h1 class="card-title mb-5 mt-3">A pura danza <br> por tres días </h1>
+                    <p class="card-text my-5">Rellenando el formulario vas a estar <br> participando por una entrada a
                         uno <br> de los días del evento “Bailando todo“</p>
                     <a class="btn btn-primary card-text" href="#" role="button">Quiero ir!</a>
             </article>
@@ -48,6 +48,7 @@
         </div>
     </header>
     <main>
+
         <div class="container my-5">
             <div class="row">
                 <div class="col-md-4">
@@ -62,70 +63,89 @@
             </div>
         </div>
 
-        <ul class="profes">
-            <li>
-                <img src="data/Recurso 1.png">
-                <h4>
-                    Marilyn Panelo
-                </h4>
-                <p> Profesara de danza clásica <br>en la Escuela de Danzas <br>Clásicas de La Plata. </p>
-            </li>
-            <li>
-                <img src="data/Recurso 1.png">
-                <h4>
-                    Viktor Filimonov
-                </h4>
-                <p> Profesor de danza clásica. <br>Primer bailarín del Ballet <br> del Teatro Argentino. </p>
-            </li>
-            <li>
-                <img src="data/Recurso 1.png">
-                <h4>
-                    Antonella Tizzano
-                </h4>
-                <p> Profesora de danza jazz y <br> urbano. Estudios realizados <br> en Asociación Sarmiento. </p>
-            </li>
-            <li>
-                <img src="data/Recurso 1.png">
-                <h4>
-                    Sofia Mazza
-                </h4>
-                <p> Profesora de danza <br> contemporánea en el <br> Teatro San Martín. </p>
-            </li>
-        </ul>
+        <article class="col-12 col-lg-12 ">
+            <div class="row text-center">
+                <div class="col-lg-3">
+                    <img class="my-3" src="data/Recurso 1.png">
+                    <h4 class="my-3">
+                        Marilyn Panelo
+                    </h4>
+                    <p class="my-3"> Profesora de danza clásica <br>en la Escuela de Danzas <br>Clásicas de La Plata.
+                    </p>
+                </div>
+                <div class="col-lg-3">
+                    <img class="my-3" src="data/Recurso 1.png">
+                    <h4 class="my-3">
+                        Viktor Filimonov
+                    </h4>
+                    <p class="my-3"> Profesor de danza clásica. <br>Primer bailarín del Ballet <br> del Teatro
+                        Argentino. </p>
+                </div>
+                <div class="col-lg-3">
+                    <img class="my-3" src="data/Recurso 1.png">
+                    <h4 class="my-3">
+                        Antonella Tizzano
+                    </h4>
+                    <p class="my-3"> Profesora de danza jazz y <br> urbano. Estudios realizados <br> en Asociación
+                        Sarmiento. </p>
+                </div>
+                <div class="col-lg-3">
+                    <img class="my-3" src="data/Recurso 1.png">
+                    <h4 class="my-3">
+                        Sofia Mazza
+                    </h4>
+                    <p class="my-3"> Profesora de danza <br> contemporánea en el <br> Teatro San Martín. </p>
+                </div>
+            </div>
+        </article>
+
+        <div class="container my-5">
+            <div class="row">
+                <div class="col-md-5">
+                    <hr class="linea">
+                </div>
+                <div class="col-md-2 text-center">
+                    <h3>ESTILOS</h3>
+                </div>
+                <div class="col-md-5">
+                    <hr class="linea">
+                </div>
+            </div>
         </div>
-        <section class="estilos">
-            <h3 class="titulos"> ESTILOS</h3>
-            <ul class="profes">
-                <li>
-                    <div class="rectangulos">
-                        <img src="data/estilos1.jpg" alt="danza clásica">
+
+        <article class="col-12 col-lg-12 text-center">
+            <div class="row">
+                <div class="card text-bg-dark col-lg-3">
+                    <img src="data/estilos1.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Clásico</h5>
+                        <p class="card-text">Técnica Vaganova de la <br> escuela rusa </p>
                     </div>
-                    <h4>Clásico</h4>
-                    <p> Técina Vaganova de la <br> escuela rusa </p>
-                </li>
-                <li>
-                    <div class="rectangulos">
-                        <img src="data/estilos2.jpg" alt="danza contemporánea">
+                </div>
+                <div class="card text-bg-dark col-lg-3">
+                    <img src="data/estilos2.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Contemporáneo</h5>
+                        <p class="card-text">Técnica Graham </p>
                     </div>
-                    <h4> Contemporáneo</h4>
-                    <p> Técninca Graham <br> </p>
-                </li>
-                <li>
-                    <div class="rectangulos">
-                        <img src="data/estilos3.jpg" alt="danza jazz">
+                </div>
+                <div class="card text-bg-dark col-lg-3">
+                    <img src="data/estilos3.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Jazz</h5>
+                        <p class="card-text">Entrenamiento y <br> coreografía de Broadway</p>
                     </div>
-                    <h4> Jazz </h4>
-                    <p> Entrenamiento y <br> coreografía de Broadway </p>
-                </li>
-                <li>
-                    <div class="rectangulos">
-                        <img src="data/estilos4.jpg" alt="danza urbana">
+                </div>
+                <div class="card text-bg-dark col-lg-3">
+                    <img src="data/estilos4.jpg" class="card-img" alt="...">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title">Urbano</h5>
+                        <p class="card-text">Implementación de <br> improvisación </p>
                     </div>
-                    <h4> Urbano</h4>
-                    <p> Implementación de<br>improvisación </p>
-                </li>
-            </ul>
-        </section>
+                </div>
+            </div>
+        </article>
+
         <section>
             <h2 class="titulos"> CRONOGRAMA </h2>
             <div id="carousel" class="carousel">
@@ -150,25 +170,53 @@
                 </button>
             </div>
         </section>
-        <h3><a href="https://balletindance.com/">Revista</a></h3>
     </main>
-    <footer>
-        <ul class="menu">
-            <li>
-                <p class="letras">Inicio</p>
-            </li>
-            <li>
-                <p class="letras">Edición digital</p>
-            </li>
-            <li>
-                <p class="letras">Capacitación docente</p>
-            </li>
-            <li>
-                <p class="letras">Tienda</p>
-            </li>
-        </ul>
-        <p class="letrastam">© Balletin Dance, La Revista Argentina de Danza - 2023 - Buenos Aires - Argentina</p>
+    <footer id="footer container-fluid">
+        <div class="row py-3 footer-row">
+            <div class="col-12 col-lg-8">
+                <ul class="w-100 mb-4">
+                    <li class="me-3">
+                        <a href="#">Inicio</a>
+                    </li>
+                    <li class="mx-3">
+                        <a href="#">Edición digital</a>
+                    </li>
+                    <li class="mx-3">
+                        <a href="#">Capacitación docente</a>
+                    </li>
+                    <li class="ms-3">
+                        <a href="#">Eventos</a>
+                    </li>
+
+                    <div class="modal-body row container-fluid">
+                        <ul>
+                            <h5 class="col-4">Joaquín</h4>
+                                <li><a target="_blank" href="https://www.instagram.com/joacopuertas/"> <i
+                                            class="col-2 fa-brands fa-instagram"></i> </a></li>
+                                <li><a target="_blank" href="https://www.linkedin.com/in/joaquin-puertas-3aa0a2239/"> <i
+                                            class="col-2 fa-brands fa-linkedin-in"></i> </a></li>
+                                <li><a target="_blank" href="https://twitter.com/PuertasJoaco"> <i
+                                            class="col-2 fa-brands fa-x-twitter"></i> </a></li>
+                        </ul>
+                        <ul>
+                            <h5 class="col-4">Lara</h4>
+                                <li><a target="_blank" href="https://www.instagram.com/lara_puppo/"> <i
+                                            class="col-2 fa-brands fa-instagram"></i> </a></li>
+                                <li><a href="#"> <i class="col-2 fa-brands fa-linkedin-in"></i></a></li>
+                                <li><a target="_blank" href="https://twitter.com/LaraPuppo"> <i
+                                            class="col-2 fa-brands fa-x-twitter"></i> </a></li>
+                        </ul>
+
+                    </div>
+            </div>
+            <h6 class="col-12 text-center my-3">
+                &copy; 2024 Joaquín Puertas y Lara Puppo. Todos los derechos reservados.
+            </h6>
+        </div>
+
+
     </footer>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
