--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <img src="data/img00.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay my-5 ms-5">
                     <h1 class="card-title mb-5 mt-3">A pura danza <br> por tres días </h1>
-                    <p class="card-text my-5">Rellenando el formulario vas a estar <br> participando por una entrada a
-                        uno <br> de los días del evento “Bailando todo“</p>
+                    <h6 class="card-text my-5">Rellenando el formulario vas a estar <br> participando por una entrada a
+                        uno <br> de los días del evento “Bailando todo“</h6>
                     <a class="btn btn-primary card-text" href="#" role="button">Quiero ir!</a>
             </article>
 
@@ -115,31 +115,31 @@
 
         <article class="col-12 col-lg-12 text-center">
             <div class="row">
-                <div class="card text-bg-dark col-lg-3">
+                <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
                     <img src="data/estilos1.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Clásico</h5>
+                    <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
+                        <h4 class="card-title">Clásico</h4>
                         <p class="card-text">Técnica Vaganova de la <br> escuela rusa </p>
                     </div>
                 </div>
-                <div class="card text-bg-dark col-lg-3">
+                <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
                     <img src="data/estilos2.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Contemporáneo</h5>
+                    <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
+                        <h4 class="card-title">Contemporáneo</h4>
                         <p class="card-text">Técnica Graham </p>
                     </div>
                 </div>
-                <div class="card text-bg-dark col-lg-3">
+                <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
                     <img src="data/estilos3.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Jazz</h5>
+                    <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
+                        <h4 class="card-title">Jazz</h4>
                         <p class="card-text">Entrenamiento y <br> coreografía de Broadway</p>
                     </div>
                 </div>
-                <div class="card text-bg-dark col-lg-3">
+                <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
                     <img src="data/estilos4.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Urbano</h5>
+                    <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
+                        <h4 class="card-title">Urbano</h4>
                         <p class="card-text">Implementación de <br> improvisación </p>
                     </div>
                 </div>
@@ -147,7 +147,6 @@
         </article>
 
         <section>
-            <h2 class="titulos"> CRONOGRAMA </h2>
             <div id="carousel" class="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -171,51 +170,47 @@
             </div>
         </section>
     </main>
-    <footer id="footer container-fluid">
-        <div class="row py-3 footer-row">
-            <div class="col-12 col-lg-8">
-                <ul class="w-100 mb-4">
-                    <li class="me-3">
-                        <a href="#">Inicio</a>
-                    </li>
-                    <li class="mx-3">
-                        <a href="#">Edición digital</a>
-                    </li>
-                    <li class="mx-3">
-                        <a href="#">Capacitación docente</a>
-                    </li>
-                    <li class="ms-3">
-                        <a href="#">Eventos</a>
-                    </li>
-
-                    <div class="modal-body row container-fluid">
-                        <ul>
-                            <h5 class="col-4">Joaquín</h4>
-                                <li><a target="_blank" href="https://www.instagram.com/joacopuertas/"> <i
-                                            class="col-2 fa-brands fa-instagram"></i> </a></li>
-                                <li><a target="_blank" href="https://www.linkedin.com/in/joaquin-puertas-3aa0a2239/"> <i
-                                            class="col-2 fa-brands fa-linkedin-in"></i> </a></li>
-                                <li><a target="_blank" href="https://twitter.com/PuertasJoaco"> <i
-                                            class="col-2 fa-brands fa-x-twitter"></i> </a></li>
-                        </ul>
-                        <ul>
-                            <h5 class="col-4">Lara</h4>
-                                <li><a target="_blank" href="https://www.instagram.com/lara_puppo/"> <i
-                                            class="col-2 fa-brands fa-instagram"></i> </a></li>
-                                <li><a href="#"> <i class="col-2 fa-brands fa-linkedin-in"></i></a></li>
-                                <li><a target="_blank" href="https://twitter.com/LaraPuppo"> <i
-                                            class="col-2 fa-brands fa-x-twitter"></i> </a></li>
-                        </ul>
-
-                    </div>
+    <footer class="footer mt-auto">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <ul class="menu">
+                        <li class="mt-lg-5 mt-5"> 
+                            <p class="letras smaller">Inicio</p>
+                        </li>
+                        <li class="mt-lg-5 mt-5"> 
+                            <p class="letras smaller">Edición digital</p>
+                        </li>
+                        <li class="mt-lg-5 mt-5"> 
+                            <p class="letras smaller">Capacitación docente</p>
+                        </li>
+                        <li class="mt-lg-5 mt-5"> 
+                            <p class="letras smaller">Tienda</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <nav class="d-flex justify-content-evenly align-items-center">
+                        <a href="" target="_blank" class="mt-lg-5 mt-3 text-white"><i class="bi bi-facebook fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-5 mt-2 text-white"><i class="bi bi-tiktok fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-5 mt-2 text-white"><i class="bi bi-twitter fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-5 mt-2 text-white"><i class="bi bi-instagram fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-5 mt-2 text-white"><i class="bi bi-youtube fs-4"></i></a>
+                    </nav>
+                </div>
             </div>
-            <h6 class="col-12 text-center my-3">
-                &copy; 2024 Joaquín Puertas y Lara Puppo. Todos los derechos reservados.
-            </h6>
+            <div class="row">
+                <div class="col-12 text-center mt-5">
+                    <small class="text-white smaller">&copy; Balletin Dance, La Revista
+                        Argentina de Danza - 2023 - Buenos Aires -
+                        Argentina</small>
+                </div>
+            </div>
         </div>
-
-
     </footer>
+
+
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
