--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <article class="col-12 col-lg-12 ">
             <div class="row text-center">
                 <div class="col-lg-3">
-                    <img class="my-3" src="data/Recurso 1.png">
+                    <img class="my-3" src="data/profe1.png">
                     <h4 class="my-3">
                         Marilyn Panelo
                     </h4>
@@ -74,7 +74,7 @@
                     </p>
                 </div>
                 <div class="col-lg-3">
-                    <img class="my-3" src="data/Recurso 1.png">
+                    <img class="my-3" src="data/profe2.png">
                     <h4 class="my-3">
                         Viktor Filimonov
                     </h4>
@@ -82,7 +82,7 @@
                         Argentino. </p>
                 </div>
                 <div class="col-lg-3">
-                    <img class="my-3" src="data/Recurso 1.png">
+                    <img class="my-3" src="data/profe3.png">
                     <h4 class="my-3">
                         Antonella Tizzano
                     </h4>
@@ -90,7 +90,7 @@
                         Sarmiento. </p>
                 </div>
                 <div class="col-lg-3">
-                    <img class="my-3" src="data/Recurso 1.png">
+                    <img class="my-3" src="data/profe4.png">
                     <h4 class="my-3">
                         Sofia Mazza
                     </h4>
@@ -99,103 +99,138 @@
             </div>
         </article>
 
-        <div class="container my-5">
-            <div class="row">
-                <div class="col-md-5">
-                    <hr class="linea">
-                </div>
-                <div class="col-md-2 text-center">
-                    <h3>ESTILOS</h3>
-                </div>
-                <div class="col-md-5">
-                    <hr class="linea">
+        <div class="estilos my-5">
+            <div class="container my-5">
+                <div class="row">
+                    <div class="col-md-5">
+                        <hr class="linea">
+                    </div>
+                    <div class="col-md-2 text-center">
+                        <h3>ESTILOS</h3>
+                    </div>
+                    <div class="col-md-5">
+                        <hr class="linea">
+                    </div>
                 </div>
             </div>
+            <article class="col-12 col-lg-12 text-center">
+                <div class="row">
+                    <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
+                        <img src="data/estilos1.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="card-title">Clásico</h4>
+                            <p class="card-text">Técnica Vaganova de la <br> escuela rusa </p>
+                        </div>
+                    </div>
+                    <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
+                        <img src="data/estilos2.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="card-title">Contemporáneo</h4>
+                            <p class="card-text">Técnica Graham <br> con secuencias de cuartas </p>
+                        </div>
+                    </div>
+                    <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
+                        <img src="data/estilos3.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="card-title">Jazz</h4>
+                            <p class="card-text">Entrenamiento y <br> coreografía de Broadway</p>
+                        </div>
+                    </div>
+                    <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
+                        <img src="data/estilos4.jpg" class="card-img" alt="...">
+                        <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
+                            <h4 class="card-title">Urbano</h4>
+                            <p class="card-text">Implementación de <br> improvisación </p>
+                        </div>
+                    </div>
+                </div>
+            </article>
         </div>
-
-        <article class="col-12 col-lg-12 text-center">
-            <div class="row">
-                <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
-                    <img src="data/estilos1.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
-                        <h4 class="card-title">Clásico</h4>
-                        <p class="card-text">Técnica Vaganova de la <br> escuela rusa </p>
-                    </div>
-                </div>
-                <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
-                    <img src="data/estilos2.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
-                        <h4 class="card-title">Contemporáneo</h4>
-                        <p class="card-text">Técnica Graham </p>
-                    </div>
-                </div>
-                <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
-                    <img src="data/estilos3.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
-                        <h4 class="card-title">Jazz</h4>
-                        <p class="card-text">Entrenamiento y <br> coreografía de Broadway</p>
-                    </div>
-                </div>
-                <div class="card text-bg-dark col-lg-3 d-flex align-items-center justify-content-center">
-                    <img src="data/estilos4.jpg" class="card-img" alt="...">
-                    <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center">
-                        <h4 class="card-title">Urbano</h4>
-                        <p class="card-text">Implementación de <br> improvisación </p>
-                    </div>
-                </div>
-            </div>
-        </article>
-
         <section>
-            <div id="carousel" class="carousel">
+            <div id="carouselExampleAutoplaying" class="carousel slide my-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="data/cronograma1.jpg" class="tamaño" alt="viernes">
+                        <img src="data/cronograma1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-flex align-items-center justify-content-center">
+                            <div>
+                                <h5>Cronograma</h5>
+                                <h2> VIERNES 7</h2>
+                                <p> <b> 16 a 17:30 </b> <br> clase de danza clásica</p>
+                                <p> <b> 18 a 19:30 </b> <br> clase de danza contemporánea</p>
+                                <p> <b> 20 a 21:30 </b> <br> clase de danza jazz</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="data/cronograma2.jpg" class="tamaño" alt="sabado">
+                        <img src="data/cronograma2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-flex align-items-center justify-content-center">
+                            <div>
+                                <h5>Cronograma</h5>
+                                <h2> SÁBADO 8</h2>
+                                <p> <b> 16 a 17:30 </b> <br> clase de danza clásica</p>
+                                <p> <b> 18 a 19:30 </b> <br> clase de danza contemporánea</p>
+                                <p> <b> 20 a 21:30 </b> <br> clase de danza urbana</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="data/cronograma3.jpg" class="tamaño" alt="domingo">
+                        <img src="data/cronograma3.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-flex align-items-center justify-content-center">
+                            <div>
+                                <h5>Cronograma</h5>
+                                <h2> DOMINGO 9</h2>
+                                <p> <b> 16 a 17:30 </b> <br> clase de danza clásica</p>
+                                <p> <b> 18 a 19:30 </b> <br> clase de danza contemporánea</p>
+                                <p> <b> 20 a 21:30 </b> <br> clase de danza jazz</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
         </section>
+
+
     </main>
     <footer class="footer mt-auto">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-6">
                     <ul class="menu">
-                        <li class="mt-lg-5 mt-5"> 
+                        <li class="mt-lg-4 mt-5">
                             <p class="letras smaller">Inicio</p>
                         </li>
-                        <li class="mt-lg-5 mt-5"> 
+                        <li class="mt-lg-4 mt-5">
                             <p class="letras smaller">Edición digital</p>
                         </li>
-                        <li class="mt-lg-5 mt-5"> 
+                        <li class="mt-lg-4 mt-5">
                             <p class="letras smaller">Capacitación docente</p>
                         </li>
-                        <li class="mt-lg-5 mt-5"> 
+                        <li class="mt-lg-4 mt-5">
                             <p class="letras smaller">Tienda</p>
                         </li>
                     </ul>
                 </div>
                 <div class="col-12 col-lg-6">
                     <nav class="d-flex justify-content-evenly align-items-center">
-                        <a href="" target="_blank" class="mt-lg-5 mt-3 text-white"><i class="bi bi-facebook fs-4"></i></a>
-                        <a href="" target="_blank" class="mt-lg-5 mt-2 text-white"><i class="bi bi-tiktok fs-4"></i></a>
-                        <a href="" target="_blank" class="mt-lg-5 mt-2 text-white"><i class="bi bi-twitter fs-4"></i></a>
-                        <a href="" target="_blank" class="mt-lg-5 mt-2 text-white"><i class="bi bi-instagram fs-4"></i></a>
-                        <a href="" target="_blank" class="mt-lg-5 mt-2 text-white"><i class="bi bi-youtube fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-4 mt-3 text-white"><i
+                                class="bi bi-facebook fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-4 mt-2 text-white"><i class="bi bi-tiktok fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-4 mt-2 text-white"><i
+                                class="bi bi-twitter fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-4 mt-2 text-white"><i
+                                class="bi bi-instagram fs-4"></i></a>
+                        <a href="" target="_blank" class="mt-lg-4 mt-2 text-white"><i
+                                class="bi bi-youtube fs-4"></i></a>
                     </nav>
                 </div>
             </div>
