--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <!-- Botón para pantallas medianas y grandes -->
                     <div class="d-none d-md-flex justify-content-start mt-3 ms-lg-5">
-                        <a class="btn btn-primary" href="#" role="button">¡Quiero ir!</a>
+                        <a class="btn btn-primary" href="#form" role="button">¡Quiero ir!</a>
                     </div>
                 </div>
                 <!-- Botón para pantallas pequeñas -->
