--- a/gracias.html
+++ b/gracias.html
@@ -54,7 +54,7 @@
                         <p>Si tienes alguna pregunta, no dudes en contactarnos en <a 
                                 href="mailto:balletindance@gmail.com">balletindance@gmail.com</a>.</p>
                     <br>
-                    <a type="button" class="btn btn-secondary mt-5" href="/#Inicio">Volver al sitio</a>
+                    <a type="button" class="btn btn-primary mt-4 boton" href="/#Inicio">Volver al sitio</a>
                         
                     </div>
                 </div>
