--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     </div>
                     <!-- Botón para pantallas medianas y grandes -->
                     <div class="d-none d-md-flex justify-content-start mt-3 ms-lg-5">
-                        <a class="btn btn-primary" href="#form" role="button">¡Quiero ir!</a>
+                        <a class="btn btn-primary boton" href="#form" role="button">¡Quiero ir!</a>
                     </div>
                 </div>
                 <!-- Botón para pantallas pequeñas -->
                 <div class="d-flex d-md-none justify-content-center position-absolute w-100" style="bottom: 80px;"> 
-                    <a class="btn btn-primary" href="#form" role="button">¡Quiero ir!</a>
+                    <a class="btn btn-primary boton" href="#form" role="button">¡Quiero ir!</a>
                 </div>
             </article>
         </div>
